Update solutions page

--- a/views/products.html
+++ b/views/products.html
@@ -173,6 +173,46 @@
           </section>
         </section>
       </section>
+      <section class="panel bg-secondary">
+        <section class="leverage m-auto p-8">
+          <section class="contents">
+            <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
+            <h2 class="text-2xl font-bold">Personalized and Relevant Content</h2>
+            <hr class="w-3/4 py-4 font-thin">
+            <ul>
+              <li>
+                Utilize smart insights from codex analytics to tailor training content to individual students.
+              </li>
+              <li>
+                Keep simulations relevant with field conditions quickly with codex authoring.
+              </li>
+            </ul>
+          </section>
+        </section>
+      </section>
+      <section class="panel bg-secondary">
+        <section class="leverage m-auto p-8">
+          <section class="contents">
+            <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
+            <h2 class="text-2xl font-bold">Scalable Collaboration</h2>
+            <hr class="w-3/4 py-4 font-thin">
+            <ul>
+              <li>
+                Enable an ecosystem of content by empowering your team to innovate and create.
+              </li>
+              <li>
+                Create different training objectives in the same environment to scale your library.
+              </li>
+            </ul>
+          </section>
+        </section>
+      </section>
+      <section class="panel bg-secondary">
+        <section class="contact">
+          
+        </section>
+      </section>
+
 
       <!-- end of container section -->
     </section>
