Complete products styling

--- a/public/css/products.css
+++ b/public/css/products.css
@@ -4,3 +4,13 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+
+li {
+  list-style: initial;
+  padding-bottom: 2rem;
+}
+
+nav li {
+  list-style: none;
+}
