--- a/views/contact.html
+++ b/views/contact.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section id = "container">
-        <section id="cover" class="text-primary panel background cover overflow-hidden">
+        <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contactstock.png')">
          <nav class="w-screen flex justify-between relative z-10 sm:p-4 lg:p-4">
         <a href="#">
           <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
@@ -38,42 +38,33 @@
         </ul>
         </nav>
           <hr class="-mt-8">
-          <h1 class="text-4xl text-left tracking-wider p-4 mt-40 ml-48">CONTACT</h1>
-          <div class="tracking-widest text-left p-4 ml-48">
+          <h1 class="text-4xl text-left tracking-wider p-4 mt-48 ml-24">CONTACT</h1>
+          <div class="tracking-widest text-left p-4 ml-24 mt-2">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
             <p>Book a demo.</p>
           </div>
        </section>
-       <section class="flex mb-4 panel background first">
-          <div class="ml-12 mt-6 p-6 pt-20 w-1/2">
-              <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider">
-                  Contact VINCI
-              </h2>
-              <hr class="mt-4">
-              <section class="text-gray-700 body-font relative">
-                <div class="container px-5 mx-auto">
-                  <div class="flex flex-col text-center w-full mb-12">
-                </div>
-              <div class="lg:w-full md:w-1/2 mx-auto">
-                <div class="flex flex-wrap -m-2">
-                  <div class="p-2 w-1/2 ">
-                    <input class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2" placeholder="Name" type="text">
-                  </div>
-                  <div class="p-2 w-1/2">
-                    <input class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2" placeholder="Email" type="email">
-                  </div>
-                  <div class="p-2 w-full">
-                    <textarea class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none h-48 focus:border-indigo-500 text-base px-4 py-2 resize-none block" placeholder="Message"></textarea>
-                  </div>
-                  <div class="p-2 w-full">
-                    <button class="flex mx-left text-white border-solid border-2 border-white-100 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">send</button>
-                  </div>
-                </div>
+       <section class="mb-4 panel background first">
+          <section class="text-gray-700 body-font relative">
+            <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
+              <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
+                <h2 class="text-primary text-3xl mb-1 font-medium title-font text-left">Contact VINCI</h2>
+                <hr class="mb-8">
+                <input class="bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
+                <input class="bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
+
+                <textarea class="border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
+                <button class=" mt-2 w-1/3 text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">send</button>
+                <p class="text-xs text-gray-500 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
+              </div>
+
+              <div class="lg:w-1/3 md:w-1/2 rounded-lg border-solid border-2 overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32" style="background-image: url('../public/img/contactstock.png')">
+                <h2></h2>
+                <img src="" alt="">
               </div>
             </div>
-            </section>
-          </div>
+          </section>
       </section>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
