Content + styling updates

--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
                 <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
               </a>
               <a href="./products.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Products</li>
+                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
               </a>
               <a href="./partners.html">
                 <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
@@ -56,18 +56,22 @@
           <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
               <source src="../public/assets/video/background2.mp4" type="video/mp4">
           </video>
-          <section class="hero-text w-full p-4 absolute z-1 sm:mt-16 md:-my-84">
-            <h1 class="font-serif border-b sm:text-2xl md:text-4xl xlg:text-5xl"> PREPARE FOR THE REAL WORLD</h1>
+          <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:-my-84">
+            <h1 class="font-serif sm:text-2xl md:text-4xl xlg:text-5xl"> PREPARE FOR THE REAL WORLD
+              <hr class="mt-4">
+            </h1>
             <br>
-             <p class="font-sans font-black -mb-20 -mt-6 sm:text-4xl md:text-6xl"> WITH A WORLD OF YOUR OWN </p>
-           <h3 class=" border-t pt-12 sm:text-2xl sm:my-16  lg:text-3xl"> Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
+             <p class="font-sans font-black -mb-20 -mt-6 sm:text-4xl md:text-6xl"> WITH A WORLD OF YOUR OWN
+              <hr class="mt-20">
+             </p>
+           <h3 class="pt-12 sm:text-2xl sm:my-8  lg:text-3xl">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
            <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl" href="/services">Learn about our services</a>
     ​
-    ​       <p class="down-arrow sm:text-4xl my-4">⌄</p>
+    ​       <p class="down-arrow sm:text-6xl my-32">⌄</p>
           </section>
 
-          <img class="absolute bottom-0 left-0 z-10  sm:w-20" src="../public/assets/figma-imgs/line-guide.png" alt="styled guideline" class="guideline">
+          <!-- <img class="absolute bottom-0 left-0 z-10  sm:w-20" src="../public/assets/figma-imgs/line-guide.png" alt="styled guideline" class="guideline"> -->
         </section>
       </section>
 
@@ -75,11 +79,11 @@
         <!--==================
          INTRO SECTION
         ==================-->
-          <section class="panel w-full h-screen sm:mx-4 lg:mx-20 lg:my-40 flex  sm:block md:flex">
+          <section class="w-full h-screen sm:mx-4 lg:mx-20 xl:mx-64 md:my-32 lg:my-64 sm:block md:flex">
             <section class="introTextBlock lg:w-9/12">
               <h1 class="text-4xl font-sans font-black border-b p-4 sm:text-center sm:w-11/12 lg:w-full lg:text-left">Codex: A New Way to Train in VR</h1>
 
-              <p class="big w-1/2 text-xl text-gray-300 p-2 sm:text-center sm:w-11/12  sm:mb-12 lg:w-full lg:text-left lg:mb-32"> Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
+              <p class="big w-1/2 text-xl text-gray-300 p-2 sm:text-center sm:w-11/12 sm:mb-12 lg:w-full lg:text-left lg:mb-32"> Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
               </p>
 
               <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l sm:ml-2 lg:text-xl lg:-ml-0 sm:block" style="width: 67%;" href="/services">
@@ -134,33 +138,34 @@
 
 
           <section class="text-gray-700 body-font bg-secondary">
-            <div class="container px-5 py-24 mx-auto">
-              <div class="flex flex-wrap -m-4">
-                <div class="p-4 md:w-1/3">
+            <div class="container px-5 mx-auto">
+              <div class="md:flex flex-wrap -m-4 lg:mt-64">
+                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-36 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
                     <div class="p-6">
-                      <h1 class="text-center tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Personalize Training</h1>
-                      <a class="text-center text-xl text-primary" href="./partners.html">click here</a>
+                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Personalize Training</h1>
+                      <a class="text-xl text-primary" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
-                <div class="p-4 md:w-1/3">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);">
-                    <img class="lg:h-48 md:h-36 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/jet.png" alt="blog">
+                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
+                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+                      <!-- <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);"> -->
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/jet.png" alt="blog">
                     <div class="p-6">
-                      <h1 class="text-center tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Built for VR</h1>
-                      <p class="text-center text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
+                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Built for VR</h1>
+                      <p class="text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
                       <a class="object-center text-xl text-primary" href="./partners.html">See why Codex is better ></a>
                     </div>
                   </div>
                 </div>
-                <div class="p-4 md:w-1/3">
+                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-36 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
                     <div class="p-6">
-                      <h1 class="text-center tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Scalable & Relavent</h1>
-                      <a class="text-center text-xl text-primary" href="./partners.html">click here</a>
+                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Scalable & Relavent</h1>
+                      <a class="text-xl text-primary" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
@@ -211,7 +216,7 @@
          PARTNERS SECTION
         ==================-->
 
-        <section class="panel partnersBlock h-screen w-full mb-64">
+        <section class="partnersBlock h-screen w-full mb-64">
           <!-- <section class="card-container w-full sm:block sm:w-full md:flex md:justify-center">
             <section class="wind card bg-secondary border rounded text-center overflow-hidden w-3/12 h-auto p-20 text-gray-400 sm:w-1/5 sm:mx-8 sm:my-12">
               <h1 class="sm:mt-10 md:mt-20 text-xl text-center mb-12">Wind Turbines</h1>
@@ -239,33 +244,34 @@
 
 
           <section class="text-gray-700 body-font bg-secondary">
-            <div class="container px-5 py-24 mx-auto">
-              <div class="flex flex-wrap -m-4">
-                <div class="p-4 md:w-1/3">
+            <div class="container px-5 mx-auto">
+              <div class="md:flex flex-wrap -m-4 lg:mt-64">
+                <div id="card" class="card p-4 md:w-1/3  hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-36 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
                     <div class="p-6">
-                      <h1 class="text-center tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Wind Turbines</h1>
-                      <a class="text-center text-xl text-primary" href="./partners.html">click here</a>
+                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Wind Turbines</h1>
+                      <a class="text-xl text-primary" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
-                <div class="p-4 md:w-1/3">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);">
-                    <img class="lg:h-48 md:h-36 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/jet.png" alt="blog">
+                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
+                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+                  <!-- <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);"> -->
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/jet.png" alt="blog">
                     <div class="p-6">
-                      <h1 class="text-center tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Air Craft Maintenance</h1>
-                      <p class="text-center text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
-                      <a class="text-center text-xl text-primary" href="./partners.html">See why Codex is better ></a>
+                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Air Craft Maintenance</h1>
+                      <p class="text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
+                      <a class="text-xl text-primary" href="./partners.html">See why Codex is better ></a>
                     </div>
                   </div>
                 </div>
-                <div class="p-4 md:w-1/3">
+                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
                   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-36 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
+                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
                     <div class="p-6">
-                      <h1 class="text-center tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Soldier Training</h1>
-                      <a class="text-center text-xl text-primary" href="./partners.html">click here</a>
+                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Soldier Training</h1>
+                      <a class="text-xl text-primary" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
@@ -280,9 +286,9 @@
         ==================-->
 
         <section class="panel spotlight h-screen w-full">
-          <h1>Spotlight</h1>
-          <section class="spot-container">
-
+          <h1 class="text-center text-3xl mt-32 uppercase font-sans font-black">Spotlight</h1>
+          <section class="spot-container flex justify-center p-12">
+            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FSheppardAirForceBase%2Fvideos%2F558267695076414%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
           </section>
         </section>
       </section>
@@ -296,12 +302,12 @@
           <section class="contents contact mt-64 p-8">
             <h1 class="text-4xl font-black mb-20">Want to Learn More About VR Training?</h1>
             <a href=./blogs.html"">
-              <span class="my-64 border p-2 bg-primary text-secondary text-2xl">Head over to Our Blogs to Learn more ></span>
+              <span class="my-64 border p-2 bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Head over to Our Blogs to Learn more ></span>
             </a>
             <br>
             <br>
             <a href="./contact.html">
-              <span class="my-64 border bg-primary text-secondary text-2xl">Or Reach Out to Us ></span>
+              <span class="my-64 p-2 border bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l">Or Reach Out to Us ></span>
             </a>
           </section>
           <footer class="footer">
@@ -310,7 +316,7 @@
                 <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
               </a>
               <a href="./products.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Products</li>
+                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
               </a>
               <a href="./partners.html">
                 <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
@@ -340,6 +346,20 @@
     </section>
 
     <!-- SCRIPTS -->
+
+    <script type="text/javascript">
+      let card = document.querySelectorAll("card");
+
+      console.log(card);
+
+      // card.addEventListener("click", () => {
+      //   alert("dog");
+      //   card.style.transform = "scale(1.3)";
+      //   card.style.zIndex = 10;
+      //   card.style.backgroundColor = "#6C6C6C";
+      //   card.style.filter = "drop-shadow(0 0 0.75rem #827D7D)";
+      // })
+    </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
