--- a/views/products.html
+++ b/views/products.html
@@ -53,7 +53,7 @@
                 <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
               </a>
               <a href="./products.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Products</li>
+                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
               </a>
               <a href="./partners.html">
                 <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
@@ -70,8 +70,16 @@
             </ul>
           </nav>
 
-          <h1 class="text-5xl font-sans font-black uppercase sm:mx-20 sm:my-20" style="z-index:100;">Codex</h1>
-          <p class="text-lg font-bold sm:mx-12 sm:my-32" style="z-index:100;">Access the entire codex suite or pick and choose which toolkits to use</p>
+          <section class="w-full p-4 absolute z-1 sm:mt-32 md:-my-84">
+            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-4xl md:text-6xl" style="z-index:100;">
+              <hr class="mt-4">
+              Codex
+              <hr class="mt-4">
+            </h1>
+            <p class="text-lg font-bold sm:mx-12 sm:my-32" style="z-index:100;">Access the entire codex suite or pick and choose which toolkits to use</p>
+
+            <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
+          </section>
 
           <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div> -->
         </section>
