--- a/views/careers.html
+++ b/views/careers.html
@@ -28,7 +28,7 @@
               <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
             </a>
             <a href="./products.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Products</li>
+              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
             </a>
             <a href="./partners.html">
               <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
@@ -48,9 +48,14 @@
         <!--===================
          HERO SECTION CONTENTS
         =====================-->
-        <section class="contents mt-64">
-            <h1 class="text-5xl font-sans font-black uppercase">Careers</h1>
-            <p class="text-lg font-bold">Join the VINCI team</p>
+        <section class="contents mt-24 w-full p-4 absolute">
+            <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.2); z-index:0;"></div> -->
+            <hr class="mt-20 p-2">
+            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-4xl md:text-6xl">Careers
+            </h1>
+            <hr class="mt-20 p-4">
+            <p class="text-center text-lg font-bold z-10">Join the VINCI team</p>
+             <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
             <!-- <img src="" alt=""> -->
         </section>
       </section>
@@ -58,11 +63,11 @@
       <!--==================
        CAREERS INFO SECTION
       ==================-->
-      <section class="panel">
-        <section class="contents mt-64 text-2xl">
+      <section class="panel bg-secondary h-full">
+        <section class="contents bg-secondary text-2xl sm:p-12 sm:mt-32 lg:mt-64 overflow-auto">
             <h1 class="text-4xl font-bold p-4">Join Our Team</h1>
             <hr class="w-3/4" style="border-color:#7C7C7C;">
-            <section class="grid grid-cols-3 border w-3/4">
+            <section class="bg-secondary grid grid-cols-3 border">
               <h3 class="w-1/3 col-span-1">Position</h3>
               <h3 class="w-1/3 col-span-1">Type</h3>
               <h3 class="w-1/3 col-span-1">Location</h3>
@@ -114,46 +119,49 @@
         ==================-->
 
         <section class="panel footer-text h-screen w-full">
-          <section class="contents contact mt-64 p-8">
+          <section class="contents contact mt-20 p-8">
             <h1 class="text-4xl font-black mb-20">Want to Learn More About VR Training?</h1>
             <a href=./blogs.html"">
-              <span class="my-64 border p-2 bg-primary text-secondary text-2xl">Head over to Our Blogs to Learn more ></span>
+              <span class=" border p-2 bg-primary text-secondary text-2xl">Head over to Our Blogs to Learn more ></span>
             </a>
             <br>
             <br>
             <a href="./contact.html">
-              <span class="my-64 border bg-primary text-secondary text-2xl">Or Reach Out to Us ></span>
+              <span class="border bg-primary text-secondary text-2xl">Or Reach Out to Us ></span>
             </a>
-          </section>
-          <footer class="footer">
-            <ul class="p-6">
-              <a href="./about.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
-              </a>
-              <a href="./products.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Products</li>
-              </a>
-              <a href="./partners.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
-              </a>
-              <a href="./blog.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
-              </a>
-              <a href="./careers.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
-              </a>
-              <a href="./contact.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
-              </a>
-            </ul>
-            </footer>
-            <section class="footer-logos float-right -my-48 p-12">
-              <div class="small-logos flex justify-end">
-                <img class="mx-12" src="../public/assets/figma-imgs/twitter.png" alt="">
-                <img src="../public/assets/figma-imgs/linkedin.png" alt="">
-              </div>
-              <img src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+            <section class="flex">
+              <footer class="footer">
+                <ul class="p-6">
+                  <a href="./about.html">
+                    <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
+                  </a>
+                  <a href="./products.html">
+                    <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
+                  </a>
+                  <a href="./partners.html">
+                    <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
+                  </a>
+                  <a href="./blog.html">
+                    <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
+                  </a>
+                  <a href="./careers.html">
+                    <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
+                  </a>
+                  <a href="./contact.html">
+                    <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
+                  </a>
+                </ul>
+                </footer>
+                <section class="footer-logos w-1/3 mx-32 absolute bottom-0 right-0">
+                  <div class="small-logos flex justify-end">
+                    <img class="mx-12" src="../public/assets/figma-imgs/twitter.png" alt="">
+                    <img src="../public/assets/figma-imgs/linkedin.png" alt="">
+                  </div>
+                  <img src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+                </section>
             </section>
+          </section>
+
         </section>
       </section>
 
